media-keys: Avoid leaking DESKTOP_AUTOSTART_ID to children

https://bugzilla.gnome.org/show_bug.cgi?id=697052